<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recordRecylerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnFinishWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditWorkout"
        tools:listitem="@layout/fragment_record_row">


    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnFinishWorkout"
        android:layout_width="94dp"
        android:layout_height="47dp"
        android:text="@string/lagre"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnEditWorkout"
        android:layout_width="101dp"
        android:layout_height="49dp"
        android:text="@string/legg_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:shadowColor="@color/md_theme_dark_background"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/exercise_name"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
